# SplitPenny

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
splitpenny/: config.py  main.py
splitpenny/crud/: bucket.py  expense.py  user.py
splitpenny/database/: models.py
splitpenny/routers/: auth.py  bucket.py  expense.py  user.py
splitpenny/schemas/: bucket.py  expense.py  user.py
splitpenny/services/: bucket.py  expense.py  user.py
splitpenny/utils/: jwt.py
