[tool.poetry]
name = "splitpenny"
version = "0.1.0"
description = ""
authors = ["Raniita <efdezsanchez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
tortoise-orm = "^0.20.0"
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
